re-added fileName parameter in pom.xml

--- a/POM/pom.xml
+++ b/POM/pom.xml
@@ -11,7 +11,7 @@
                 <version>2.19.1</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>regression_tests.xml</suiteXmlFile>
+                        <suiteXmlFile>${fileName}</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
